# goit-algo-hw-08

./: README.md  pyproject.toml
src/: avl_tree.py  task_1.py  task_2.py  task_3.py
