[project]
name = "goit-algo-hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Yatsa-dev",email = "ihor.yatsyshynn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"